--- a/emailsender/demoapp/templates/email.html
+++ b/emailsender/demoapp/templates/email.html
@@ -10,6 +10,7 @@
         SEND AN EMAIL
     </h1>
     <form action="{% url 'email' %}" method="post">
+        {% csrf_token %}
         <table>
             <tr>
                 <td>
@@ -25,6 +26,9 @@
                 </td>
             </tr>
             <tr>
+                <td>
+                    <input type="submit" value="SEND">
+                </td>
                 <td>
                     <input type="reset" value="Clear">
                 </td>
